--- a/P1/index.html
+++ b/P1/index.html
@@ -73,10 +73,10 @@ $(window).resize(function(){
 <a href="index.html"><img alt="Home" id="logo-header" src="img/logo.png"></a>
 <nav class="clearfix">
 	<ul class="clearfix">
-		<li><a href="#">Hotel</a></li>
+		<li><a href="index.html">Hotel</a></li>
 		<li><a href="#">Vuelo</a></li>
 		<li><a href="#">Coche</a></li>
-        <li><a href="#">  Mi cuenta</a></li><br clear="all" />
+        <li><a href="login.html">  Mi cuenta</a></li>
 	</ul>
 <a href="#" id="pull"></a>
  </nav>
@@ -86,6 +86,7 @@ $(window).resize(function(){
 	
 <section id="main-content">
 <div class="banform">
+</br>
 <h1>Todos los hoteles</h1>
 <form>
 <input name="Lugar" type="text" placeholder="Lugar" size="50" maxlength="30">
@@ -141,7 +142,7 @@ $(window).resize(function(){
 <footer id="main-footer">
 
 <div id='footer2'  class="colum2 column-left">
-  <p><strong>Viaggio</strong>
+  <p align="left"><strong>Viaggio</strong>
   </br>Blog
   </br>Mi cuenta
   </br>Trabaja con nosotros
@@ -150,7 +151,7 @@ $(window).resize(function(){
 </div>
 
 <div id='footer3'  class="colum2 column-center">
-  <p><strong>Contacto</strong>
+  <p align="left"><strong>Contacto</strong>
   </br>FAQS
   </br>Propietarios de Hoteles
   </br>Prensa
@@ -159,11 +160,11 @@ $(window).resize(function(){
 </div>
 
 <div id='footer4'  class="colum2 column-right">
-  <p><strong>Seguridad</strong>
+  <p align="left"><strong>Seguridad</strong>
   </br>Privacidad
   </br>Términos y condiciones
   </br>Aviso Legal
-  <p>&copy; 2017 Viaggio</p>
+  <p align="left">&copy; 2017 Viaggio</p>
   </br>
   </p>
 </div>
