--- a/P1/index.html
+++ b/P1/index.html
@@ -31,6 +31,92 @@ $(window).resize(function(){
     }
 });
 </script> 
+
+<!-- CÓDIGO PARA INCREMENTAR/DECREMENTAR HABITACIONES/PERSONAS -->
+<script>
+	var contadorP=1;
+	var contadorH=1;
+	//Contador Personas
+	function incrementarP() {
+		if (contadorP<12){
+			//if(contadorP%4==0){ 
+			if((contadorP/4<=contadorH) && contadorP%4==0){
+				contadorH++;
+				document.getElementById("resultadoH").value=contadorH;
+			}
+			contadorP++;
+			document.getElementById("resultadoP").value=contadorP;	
+		}
+		else{ 
+			contadorP=12;
+			alert("Max. personas 12");
+		}
+	}
+	
+	function decrementarP() {
+		if(contadorP!=1){
+			if(contadorP==contadorH){
+				contadorP--;
+				document.getElementById("resultadoP").value=contadorP;
+				contadorH--;
+				document.getElementById("resultadoH").value=contadorH;
+			} 
+			else{
+				contadorP--;
+				document.getElementById("resultadoP").value=contadorP;
+				if(contadorP%4==0){
+					contadorH--;
+					document.getElementById("resultadoH").value=contadorH;
+				}
+			}
+		}
+	}
+	//Contador Habitaciones
+	function incrementarH() {
+		if (contadorH<12){
+			if(contadorH<contadorP){
+				contadorH++;
+				document.getElementById("resultadoH").value=contadorH;
+			}
+			else{
+				contadorH++;
+				document.getElementById("resultadoH").value=contadorH;
+				if(contadorP<=12){
+					contadorP++;
+					document.getElementById("resultadoP").value=contadorP;	
+				}
+			}
+		}
+		else{ 
+			contadorH=12;
+			if(contadorP==13) contadorP--;
+			alert("Max. habitaciones 12");
+		}
+
+	}
+	
+	function decrementarH() {
+		if(contadorH!=1){ 
+			if(contadorH==contadorP){
+				contadorH--;
+				document.getElementById("resultadoH").value=contadorH;
+				contadorP--;
+				document.getElementById("resultadoP").value=contadorP;
+			}
+			else {
+				contadorH--;
+				document.getElementById("resultadoH").value=contadorH;
+				if (contadorP/4<contadorH){
+					contadorP--;
+					document.getElementById("resultadoP").value=contadorP;	
+				}
+			}
+		}
+
+		
+	}
+</script>
+
 <!-- CÓDIGO PARA ELEGIR FECHA EN EL FORMULARIO-->
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
@@ -103,22 +189,31 @@ $(window).resize(function(){
 <section id="main-content">
 <div class="banform">
 </br>
+
+<center>
 <h1>Todos los hoteles</h1>
 <form>
 <input name="Lugar" type="text" placeholder="Lugar" size="50" maxlength="30">
 <input type="text" name="fechal" placeholder="Fecha de llegada" id="fechal" size="15" value=""/>
 <input type="text" name="fechas" placeholder="Fecha de salida" id="fechas" size="15" value="" />
-<select name="habitacion" size="1">
-<option>1 adulto, 1 habitaci&oacute;n</option>
-<option>2 adultos, 1 habitaci&oacute;n</option>
-<option>2 adultos, 2 habitaciones</option>
-<option>1 adulto, 1 ni&ntilde;o, 1 habitaci&oacute;n</option>
-<option>2 adultos, 1 ni&ntilde;o, 1 habitaci&oacute;n</option>
-<option>2 adultos, 1 ni&ntilde;o, 2 habitaciones</option>
-</select>
+<br/><br/>
+<label title="nper" style="color:#FFFFFF">Nº de personas</label>
+<input style="color:#ffffff; background-color:#00a5d3; border-radius:0px;border: 2px solid #007096;" type="button" onClick="incrementarP()" value="+"size="1">
+<input style="color:#ffffff; background-color:#00a5d3; border-radius:0px;border: 2px solid #007096;" type="button" onClick="decrementarP()" value="-" size="1">
+<label>
+<input  name="resultadoP" id="resultadoP" type="text" value="1" onClick="contadorP = this.value" 
+onchange="contador = this.value" size="1">
+</label>
+<label title="nhab" style="color:#FFFFFF">Nº de habitaciones</label>
+<input style="color:#ffffff; background-color:#00a5d3; border-radius:0px;border: 2px solid #007096;" type="button" onClick="incrementarH()" value="+"size="1">
+<input style="color:#ffffff; background-color:#00a5d3; border-radius:0px;border: 2px solid #007096;" type="button" id="menos" onClick="decrementarH()" value="-" size="1">
+<label>
+<input name="resultadoH" id="resultadoH" type="text" value="1" onClick="contadorH = this.value" 
+onchange="contadorH = this.value" size="1">
+</label>
 <input name="Buscar" type="button" value="Buscar" class="boton bIn">
 </form>
-
+</center>
 </div>	
 <article>
 <header>	
