--- a/P1/usuario.html
+++ b/P1/usuario.html
@@ -93,7 +93,11 @@ function openCity(evt, cityName) {
 
 <div id="Datos" class="tabcontent">
   <h3>Mis Datos</h3>
-  <p>No tienes ninguna búsqueda guardada</p>
+  <p>Nombre: Fulano</p>
+  <p>Apellidos: De Tal</p>
+  <p>Fecha de Nacimiento: 12/11/2017</p>
+  <p>Eamil: fulanodetal@gmail.com</p>
+  <a href="modificar.html">Modificar mis datos</a>
 </div> 
 
 
