--- a/P1/resultado.html
+++ b/P1/resultado.html
@@ -64,7 +64,7 @@ Nombre del hotel
 <br />
 Precio
 <br />
-web
+<a href="#">Ver características</a>
 </div>
 </div>
 
@@ -76,7 +76,7 @@ Nombre del hotel
 <br />
 Precio
 <br />
-web
+<a href="#">Ver características</a>
 </div>
 </div>
 
@@ -88,7 +88,7 @@ Nombre del hotel
 <br />
 Precio
 <br />
-web
+<a href="#">Ver características</a>
 </div>
 </div>
 
