--- a/Viaggio/WebContent/error.html
+++ b/Viaggio/WebContent/error.html
@@ -16,13 +16,11 @@ $(function() {
     var pull = $('#pull');
     menu = $('nav ul');
     menuHeight = menu.height();
-
     $(pull).on('click', function(e) {
         e.preventDefault();
         menu.slideToggle();
     });
 });
-
 $(window).resize(function(){
     var w = $(window).width();
     if(w > 320 && menu.is(':hidden')) {
@@ -35,7 +33,7 @@ $(window).resize(function(){
 <body>
 <!-- Contenido centra -->
 <div class="contUser">
-<!-- Men˙ cabecera --> 
+<!-- Men√∫ cabecera --> 
 <header id="main-header">
 		
 <a href="index.html"><img alt="Home" id="logo-header" src="img/logo.png"></a>
@@ -54,7 +52,7 @@ $(window).resize(function(){
 <!-- Contenido central -->
 <div class="contUser">
 
-<div class="tab"><h1><img alt="warning" src="img/w.png"> No se ha encontrado la p·gina buscada</h1>
+<div class="tab"><h1><img alt="warning" src="img/w.png"> No se ha encontrado la p√°gina buscada</h1>
 </div>
 
 
@@ -62,7 +60,7 @@ $(window).resize(function(){
 </div>
 
 
- <!-- PIE DE P¡GINA -->     
+ <!-- PIE DE P√ÅGINA -->     
 <footer id="main-footer">
 
 <div id='footer2'  class="colum2 column-left">
@@ -86,7 +84,7 @@ $(window).resize(function(){
 <div id='footer4'  class="colum2 column-right">
   <p align="left"><strong>Seguridad</strong>
   </br>Privacidad
-  </br>TÈrminos y condiciones
+  </br>T√©rminos y condiciones
   </br>Aviso Legal
   <p align="left">&copy; 2017 Viaggio</p>
   </br>
